Login, sign up page, auth state

--- a/apps/esports-api/project.json
+++ b/apps/esports-api/project.json
@@ -50,7 +50,7 @@
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/apps/esports-api"],
+      "outputs": ["{workspaceRoot}/coverage/apps/esports-api"],
       "options": {
         "jestConfig": "apps/esports-api/jest.config.ts",
         "passWithNoTests": true
