--- a/package.json
+++ b/package.json
@@ -3,12 +3,24 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "start": "nx serve",
-    "build": "nx build",
-    "test": "nx test"
+    "start:api": "npx nx serve",
+    "start:ui": "npx nx serve esports",
+    "build": "npx nx build",
+    "test": "npx nx test",
+    "format:check": "npx prettier --config .prettierrc --check .",
+    "format:fix": "npx prettier --config .prettierrc --write .",
+    "lint:all": "npx nx run-many --target=lint"
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "15.0.4",
+    "@angular/common": "15.0.4",
+    "@angular/compiler": "15.0.4",
+    "@angular/core": "15.0.4",
+    "@angular/forms": "15.0.4",
+    "@angular/platform-browser": "15.0.4",
+    "@angular/platform-browser-dynamic": "15.0.4",
+    "@angular/router": "15.0.4",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/jwt": "^9.0.0",
@@ -16,24 +28,42 @@
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.1.3",
+    "@ngrx/component-store": "15.0.0",
+    "@ngrx/effects": "15.0.0",
+    "@ngrx/entity": "15.0.0",
+    "@ngrx/router-store": "15.0.0",
+    "@ngrx/store": "15.0.0",
     "bcrypt": "^5.1.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.0.0",
-    "tslib": "^2.3.0"
+    "rxjs": "~7.5.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "15.0.4",
+    "@angular-eslint/eslint-plugin": "15.0.0",
+    "@angular-eslint/eslint-plugin-template": "15.0.0",
+    "@angular-eslint/template-parser": "15.0.0",
+    "@angular/cli": "~15.0.0",
+    "@angular/compiler-cli": "15.0.4",
+    "@angular/language-service": "15.0.4",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
-    "@nrwl/cli": "14.8.4",
-    "@nrwl/eslint-plugin-nx": "14.8.4",
-    "@nrwl/jest": "14.8.4",
-    "@nrwl/linter": "14.8.4",
-    "@nrwl/nest": "14.8.4",
-    "@nrwl/node": "14.8.4",
-    "@nrwl/workspace": "14.8.4",
+    "@ngrx/eslint-plugin": "^15.1.0",
+    "@ngrx/schematics": "^15.1.0",
+    "@ngrx/store-devtools": "15.0.0",
+    "@nrwl/angular": "15.4.4",
+    "@nrwl/cli": "15.4.4",
+    "@nrwl/cypress": "15.4.4",
+    "@nrwl/eslint-plugin-nx": "15.4.4",
+    "@nrwl/jest": "15.4.4",
+    "@nrwl/linter": "15.4.4",
+    "@nrwl/nest": "15.4.4",
+    "@nrwl/node": "15.4.4",
+    "@nrwl/workspace": "15.4.4",
     "@types/bcrypt": "^5.0.0",
     "@types/jest": "28.1.1",
     "@types/node": "16.11.7",
@@ -41,12 +71,19 @@
     "@types/passport-local": "^1.0.34",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
+    "autoprefixer": "^10.4.0",
+    "cypress": "^11.0.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-cypress": "^2.10.3",
+    "jasmine-marbles": "~0.9.1",
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
-    "nx": "14.8.4",
+    "jest-preset-angular": "12.2.3",
+    "nx": "15.4.4",
+    "postcss": "^8.4.5",
     "prettier": "^2.6.2",
+    "tailwindcss": "^3.0.2",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
     "typescript": "~4.8.2"
