--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -18,6 +18,7 @@
       "@project-assignment/esports-api/feature-auth": ["libs/esports-api/feature-auth/src/index.ts"],
       "@project-assignment/esports/auth/data-access": ["libs/esports/auth/data-access/src/index.ts"],
       "@project-assignment/esports/auth/feature": ["libs/esports/auth/feature/src/index.ts"],
+      "@project-assignment/esports/home/feature": ["libs/esports/home/feature/src/index.ts"],
       "@project-assignment/shared/data-models-api": ["libs/shared/data-models-api/src/index.ts"]
     }
   },
